# pre-tool-hook

./: .releaserc.json  Cargo.toml  LICENSE  README.md
.github/workflows/: build_and_release.yml
doc/: install.md
src/: main.rs
